Update dependencies to latest stable versions and fix deprecations
Update all dependencies: guava 33.5.0, jsoup 1.22.1, gson 2.13.2,
jackson 2.21.0, protobuf 4.33.5, joda-time 2.14.0. Add checker-qual
dependency. Update maven-compiler-plugin to 3.15.0 and
maven-deploy-plugin to 3.1.4. Replace deprecated APIs: Charsets with
StandardCharsets, new URL() with URI.create().toURL(),
CharMatcher.invisible()/digit() with non-deprecated equivalents,
JsonReader.setLenient() with setStrictness(), and fix Safelist override
visibility for jsoup 1.22.